<resources>
    <string name="app_name">HabitTracker</string>
    <string name="add_habit">Add habit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="empty_list">Empty list</string>
    <string name="my_habits">My habits</string>
    <string name="habit_type">Habit type</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="times">times</string>
    <string name="days">days</string>
    <string name="save_habit">Save habit</string>
    <string name="habit_priority">Habit priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="amount">Amount</string>
    <string name="frequency">Frequency</string>
    <string name="try_again">Try again</string>
    <string name="habit_editor">Habit editor</string>
    <string name="rgb_text" translatable="false">RGB = %1$d, %2$d, %3$d</string>
    <string name="hsv_text" translatable="false">HSV = %1$s, %2$s, %3$s</string>
    <string name="fill_all_fields">Please, fill all the fields.</string>
    <string name="times_holder">%1$d times</string>
    <string name="home_screen">Home screen</string>
    <string name="about_application_title">About application</string>
    <string name="pager_title_good">Good</string>
    <string name="pager_title_bad">Bad</string>
    <string name="developer_sign" translatable="false">\@d3rvich</string>
    <string name="about_application">Control your habits.</string>
    <string name="theme_setting">Theme setting</string>
    <string name="light">Light</string>
    <string name="night">Night</string>
    <string name="system_default">System default</string>
    <string name="filter_label">Filter and sort</string>
    <string name="by_creation_time">By creation time</string>
    <string name="by_priority">By priority</string>
    <string name="by_title">By title</string>
    <string name="no_sorting">No sorting</string>
    <string name="search">Search</string>
    <string name="sorting">Sorting</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_habit">Remove habit?</string>
    <string name="remove_message">This action can\'t be cancel.</string>
    <string name="header_image">Header image</string>
    <string name="check_internet_connection">Check internet connection</string>
</resources>