<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/about_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_application"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/theme_setting"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_application"
        tools:viewBindingIgnore="true" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/settings_title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/light_theme"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/dark_theme"
            android:text="@string/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/system_default"
            android:text="@string/system_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_sign"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>