<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="60dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/HabitEditorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/title"
                tools:ignoreViewBinding='true' />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/HabitEditorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/habit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/HabitEditorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_priority" />

            <Spinner
                android:id="@+id/habit_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/HabitEditorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_type" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/good_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/bad_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/bad" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/HabitEditorTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/amount" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habit_count"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="8dp"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    tools:text="0" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/times" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/HabitEditorTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/frequency" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habit_frequency"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    tools:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/days" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:indeterminate="false"
                android:max="360"
                android:progress="180"
                android:thumb="@drawable/color_picker_thumb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rgb_color_value"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="RGB = #RRGGBB" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hsv_color_value"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="HSV = H, S, V" />
            </LinearLayout>

            <View
                android:id="@+id/color_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="4dp"
        android:text="@string/save_habit" />
</FrameLayout>
